--- a/contact details.html
+++ b/contact details.html
@@ -5,19 +5,22 @@
     <title>rongala vinay contact details</title>
   </head>
   <body>
-
+    <center>
       <ol type="i">
         <li><strong>phone number:</strong>6303620981</li>
+        <br>
         <li><strong>address:</strong>plot 101,block 3,sai residency,road 4,chandanagar,hyderabad</li>
+        <br>
         <li><strong>whatsapp number:</strong>8096007554</li>
-
+         <br>
         <li><strong>email address:</strong>vinayrongala2002@gmail.com</li>
+        <br>
       </ol>
       <hr size="3" noshade>
       <form action="mailto:vinayrongala2002@gmail.com" method="post" enctype="text/plain">
         <label>Name</label>
         <input type="text" name="your Name" value="">
-        <br>
+        <br><br>
         <label>email id</label>
         <input type="email" name="your email" value="">
         <br><br>
@@ -34,6 +37,6 @@
 
       </form>
 
-
+    </center>
   </body>
 </html>
