--- a/contact details.html
+++ b/contact details.html
@@ -17,6 +17,7 @@
         <br>
       </ol>
       <hr size="3" noshade>
+      <h3>TO GIVE YOUR CONTACT INFORMATION</h3>
       <form action="mailto:vinayrongala2002@gmail.com" method="post" enctype="text/plain">
         <label>Name</label>
         <input type="text" name="your Name" value="">
@@ -24,13 +25,13 @@
         <label>email id</label>
         <input type="email" name="your email" value="">
         <br><br>
-        <label>age</label>
-        <input type="number" name="your age" value="">
+        <label>phone number</label>
+        <input type="tel" name="your number" value="">
         <br><br>
         <input type="checkbox" name="" value="">
-        <label>did u agree to the condition</label>
+        <label>the given information is right</label>
         <br><br>
-        <label>your message</label><br><br>
+        <label>any thing to say</label><br><br>
         <textarea name="your message" rows="8" cols="80"></textarea><br><br>
         <label>submit</label>
         <input type="submit" name="" value="">
